--- a/style.css
+++ b/style.css
@@ -7,9 +7,23 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+.header {
+    display: flex;
+    align-items: center;
+}
+
+.header img {
+    width: 9rem;
+    margin-right: 1rem;
+}
+
 .container {
+    position: relative;
     width: 70%;
+    height: 100vh;
     margin: auto;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
 }
 
 .new-book-modal {
@@ -18,15 +32,18 @@ body {
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
-    z-index: 1;
+    z-index: 3;
     background-color: rgb(243, 243, 243);
-    width: 30%;
-    margin: auto;
+    width: 20rem;
     display: none;
     flex-direction: column;
-    padding: 0.8rem 2rem 2rem 2rem;
-    font-size: 1.3rem;
+    padding: 1rem 2rem;
+    font-size: 1.2rem;
     border-radius: 5px;
+}
+
+.new-book-modal h2 {
+    margin-bottom: 1rem;
 }
 
 .new-book-modal input[type=text] {
@@ -34,18 +51,38 @@ body {
     font-size: 1.2rem;
     border-radius: 5px;
     border: 1px solid rgb(141, 141, 141);
+    padding: 0.2rem;
 }
 
 
 .new-book-modal div:not(:last-child) {
     display: flex;
     flex-direction: column;
+    margin-bottom: 0.7rem;
+}
+
+.new-book-modal p {
+    margin-top: 0.2rem;
+    background-color: rgb(255, 146, 146);
+    padding: 0.2rem;
+    border-radius: 3px;
+    display: none;
 }
 
 .new-book-modal button {
     width: 7rem;
     margin: 1rem auto;
     font-size: 1em;
+    background: rgb(97, 171, 255);
+    color: white;
+    border-radius: 5px;
+    border: 1px solid rgb(136, 136, 136);
+    padding: 0.6rem;
+}
+
+.new-book-modal button:hover {
+    cursor: pointer;
+    transform: scale(0.9);
 }
 
 .close-modal {
@@ -65,6 +102,7 @@ body {
     grid-template-columns: repeat(5, 1fr);
     margin-top: 1rem;
     justify-items: center;
+    text-align: center;
 }
 
 .book-div {
@@ -75,7 +113,6 @@ body {
     padding: 0.3rem 1rem 1rem 1rem;
     display: grid;
     /* grid-template-rows: repeat(3, auto); */
-    text-align: center;
     border-radius: 10px;
 }
 
@@ -88,6 +125,7 @@ body {
 .header {
     color: rgb(214, 126, 24);
     font-size: 1.4rem;
+    display: inline-block;
 }
 
 .read-btn {
@@ -117,6 +155,28 @@ body {
     transform: scale(1.15);
 }
 
+.open-new-book {
+    position: fixed;
+    bottom: 1rem;
+    right: 1rem;
+    z-index: 1;
+    border-radius: 50%;
+    height: 2.5rem;
+    width: 2.5rem;
+    font-size: 2.2rem;
+    display: grid;
+    align-content: center;
+    border: none;
+    background-color: rgb(214, 126, 24);
+    border: 1px solid rgb(206, 206, 206);
+    color: white;
+}
+
+.open-new-book:hover {
+    cursor: pointer;
+    transform: scale(0.9);
+}
+
 .gray-background {
     display: none;
     background-color: rgba(134, 134, 134, 0.856);
@@ -125,6 +185,7 @@ body {
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 2;
 }
 
 @media (max-width: 2150px) {
@@ -154,5 +215,9 @@ body {
 @media (max-width: 650px) {
     .library-container {
         grid-template-columns: repeat(1, 1fr);
+    }
+
+    .new-book-modal {
+        width: 15rem
     }
 }
